--- a/News_Portal/news/templates/flatpages/default.html
+++ b/News_Portal/news/templates/flatpages/default.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Bare - Start Bootstrap Template</title>
+        <title>Bare - News Portal</title>
         <!-- Основная тема CSS (включает Bootstrap)-->
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     </head>
     <body>
+        {% load cache %}
+        {% cache 600 navbar request.path %}
         <!-- Адаптивная навигация-->
          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
              <div class="container">
@@ -43,6 +45,7 @@
                 </div>
             </div>
         </nav>
+        {% endcache %}
         <!-- Адаптивная навигация вариант №1
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark static-top">
             <div class="container">
