--- a/News_Portal/news/templates/flatpages/default.html
+++ b/News_Portal/news/templates/flatpages/default.html
@@ -7,10 +7,11 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         {% get_current_language as current_language %}
-        <title>{{ _("News Portal") }}</title>
+        <title>{{ _("Portal News") }}</title>
         <!-- Основная тема CSS (включает Bootstrap)-->
         {% load static %}
         <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
+        {% include 'flatpages/localeBar.html' %} <!-- Здесь переключатель языка -->
     </head>
     <body>
         {% load cache %}
@@ -20,7 +21,7 @@
          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
              <div class="container">
                  <a class="navbar-brand" href="/">{{ _("News Portal") }}</a>
-                 {% include 'flatpages/localeBar.html' %} <!-- Вставьте здесь переключатель языка -->
+                 {% include 'flatpages/localeBar.html' %} <!-- Здесь переключатель языка -->
                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                          data-bs-target="#navbarSupportedContent"
                          aria-controls="navbarSupportedContent"
